syntax = "proto3";

option csharp_namespace = "ProductService.Grpc";

// Service for managing product operations including inventory updates and product details retrieval
service ProductService {
    //Update inventory after an order is placed
    rpc UpdateInventory(UpdateInventoryRequest) returns (UpdateInventoryResponse);
    //Get product details by product id
    rpc GetProductById (GetProductReq) returns (GetProductResponse);
}

message UpdateInventoryRequest{
    int32 product_id = 1;
    int32 quantity_change = 2;
}

message UpdateInventoryResponse{
    bool success = 1;
    string message = 2;
    int32 new_stock =3;
}

message GetProductReq{
    int32 product_id = 1;
}

message GetProductResponse{
    string name =1 ;
    double price = 2 ;
    string category =3 ;
    int32 stock = 4;
 
}
